# contract_extractor

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflow/: commit.yaml
.github/workflows/: commit.yaml
contact_extractor/: add_document.py  app.py
contract_extractor/: add_document.py  app.py  db.py
contract_extractor/cruds/: contracts.py
contract_extractor/llm_chains/: contract_registration.py
contract_extractor/models/: contracts.py
contract_extractor/prompts/: extract_template.md
contract_extractor/routers/: contracts.py
contract_extractor/schema/: contracts.py
contract_extractor/schema_for_llm/: data_in_contract.py
contract_extractor/structure/: data_in_contract.py
contract_extractor/vectorstore/: vectorstore.py
tests/: test_add_document.py
