[project]
name = "ContractExtractor"
version = "0.1.0"
description = "Contract Extractor"
authors = [
    { name = "KO" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pinecone-client>=4.1.1",
    "tiktoken>=0.7.0",
    "langchain>=0.2.3",
    "langchain-community>=0.2.4",
    "langchain-openai>=0.1.8",
    "pypdf>=4.2.0",
    "uvicorn[standard]>=0.30.1",
    "fastapi>=0.111.0",
    "aiomysql>=0.2.0",
    "sqlalchemy>=2.0.30",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pre-commit>=3.7.0",
    "ruff>=0.4.7",
]
